@@ -12,6 +12,8 @@ from the spec file.
 
 Options:
     --dry-run    Print results without changing the working copy
+    --download -d
+                 Try to download the source files not found
     -h           Show this message
 
 Examples:
@@ -21,6 +23,8 @@ Examples:
 def parse_options():
     parser = OptionParser(help=HELP)
     parser.add_option("--dry-run", dest="dryrun", default=False,
+            action="store_true")
+    parser.add_option("-d", "--download", dest="download", default=False,
             action="store_true")
     opts, args = parser.parse_args()
     if len(args):
