@@ -3,6 +3,9 @@ verbose = no
 default_parent = svn+ssh://svn.mandriva.com/svn/packages/cooker
 url-map = svn\+ssh://svn\.mandriva\.com/(.*) file:///\1
 #tempdir = /tmp
+## the command used to download files when using repsys sync -d
+#download-command = wget -c -O '$dest' $url
+
 
 [log]
 oldurl = svn+ssh://svn.mandriva.com/svn/packages/misc
